# test

./: CMakeLists.txt  README.md  guestregistration.cpp  guestregistration.h  input.cpp  input.h  main.cpp  person.cpp  person.h  registration.cpp  registration.h  registrationfactory.cpp  registrationfactory.h  registrationlist.cpp  registrationlist.h  registrationlistwriter.cpp  registrationlistwriter.h  registrationlistxml.cpp  registrationlistxml.h  registrationlistxmlstreamreader.cpp  registrationlistxmlstreamreader.h  studentregistration.cpp  studentregistration.h  tableview.cpp  tableview.h
